# stm32f3-discovery

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.x
.cargo/: config
.github/workflows/: rust.yml
examples/: accel_pwm.rs  blinky.rs  blinky_int.rs  button.rs  button_int.rs  compass.rs  leds.rs  leds_array_indexing.rs  leds_array_iterator.rs  leds_directions.rs  leds_iterator_test.rs  roulette.rs
src/: button.rs  compass.rs  leds.rs  lib.rs  main.rs
src/button/: hal.rs  interrupt.rs  mod.rs
src/compass/: mod.rs  rev_d.rs  rev_e.rs
src/leds/: hal.rs  mod.rs
