[package]
authors = ["Christopher J. McClellan <chris.mcclellan203@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f3-discovery"
description = "Board support package for the STM32F3DISCOVERY board"
repository = "https://github.com/rubberduck203/stm32f3-discovery"
documentation = "https://docs.rs/crate/stm32f3-discovery"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["discovery", "stm32f3", "bsp", "arm"]
license = "MIT OR Apache-2.0"
version = "0.4.0"
exclude = [
    ".vscode/*",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [] # build only default target for docs

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
switch-hal = "0.3.2"
# switch-hal = { git = "https://github.com/rubberduck203/switch-hal", branch = "master" }
lsm303dlhc = "0.2.0"
accelerometer = "0.11.0"

# For the stm32f303vc mcu
[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.4.1"

[dev-dependencies]
panic-halt = "0.2.0"
panic-itm = "0.4.1"

# # this lets you use `cargo fix`!
# [[bin]]
# name = "stm32f3-discovery"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations