[package]
authors = ["Christopher J. McClellan <chris.mcclellan203@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f3-discovery"
description = "Board support package for the STM32F3DISCOVERY board"
repository = "https://github.com/rubberduck203/stm32f3-discovery"
documentation = "https://docs.rs/crate/stm32f3-discovery"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["discovery", "stm32f3", "bsp", "arm"]
license = "MIT OR Apache-2.0"
version = "0.7.2"
exclude = [
    ".vscode/*",
]

[badges]
maintenance = { status = "actively-developed" }

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = [] # build only default target for docs

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
switch-hal = "0.4.0"
# switch-hal = { git = "https://github.com/rubberduck203/switch-hal", branch = "master" }
lsm303dlhc = { version = "0.2.0", optional = true }
lsm303agr = { version = "0.1.1", optional = true }
accelerometer = "0.12.0"

[features]
default = ["revD"]
revD = ["lsm303dlhc"]
revE = ["lsm303agr"]

# For the stm32f303vc mcu
[dependencies.stm32f3xx-hal]
features = ["stm32f303xc", "rt"]
version = "0.7.0"

[dev-dependencies]
panic-halt = "0.2.0"
panic-itm = "0.4.2"

# # this lets you use `cargo fix`!
# [[bin]]
# name = "stm32f3-discovery"
# test = false
# bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
